# distributed_db_node

./: .gitignore  Cargo.toml  config.toml  log4rs.yaml
src/: example.rs  main.rs
src/api/: mod.rs  rest.rs
src/managment/: client.rs  mod.rs
src/network/: handlers.rs  manager.rs  mod.rs  server.rs  transport.rs  zenith_connection.rs
src/protocol/: createDatabase.rs  createTable.rs  message_type.rs  mod.rs  statement.rs
src/protocol/data/: bulk_insert.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs  upsert.rs
src/protocol/index/: create_index.rs  drop_index.rs  mod.rs  show_indexes.rs
src/protocol/management/: createDatabase.rs  create_database.rs  dropDatabase.rs  drop_database.rs  mod.rs  showDatabases.rs  show_databases.rs  useDatabase.rs  use_database.rs
src/protocol/operations/: alterTable.rs  alter_table.rs  createTable.rs  create_table.rs  describeTable.rs  describe_table.rs  dropTable.rs  drop_table.rs  mod.rs  renameTable.rs  rename_table.rs  showTables.rs  show_tables.rs  truncateTable.rs  truncate_table.rs
src/protocol/transaction/: begin_transaction.rs  commit.rs  mod.rs  rollback.rs
src/statement/: alter_table_statement.rs  begin_transaction_statement.rs  bulk_insert_statement.rs  column_definition.rs  commit_statement.rs  create_database_statement.rs  create_index_statement.rs  create_table_statement.rs  delete_statement.rs  describe_table_statement.rs  drop_database_statement.rs  drop_index_statement.rs  drop_table_statement.rs  empty_statement.rs  error.rs  insert_statement.rs  login_statement.rs  mod.rs  release_savepoint_statement.rs  rename_table_statement.rs  rollback_statement.rs  savepoint_statement.rs  select_statement.rs  show_indexes_statement.rs  statement.rs  truncate_table_statement.rs  update_statement.rs  upsert_statement.rs  validate.rs
src/storage/: dbengine.rs  engine.rs  kv_store.rs  mod.rs
src/transport/: header.rs  message.rs  mod.rs  response.rs
src/utils/: config.rs  logger.rs  mod.rs  secure.rs
