[package]
name = "distributed_db_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] } # Runtime asíncrono
serde = { version = "1.0", features = [
  "derive",
] } # Serialización/Deserialización
serde_json = "1.0" # Soporte para JSON
bincode = "1.3" # Serialización binaria
actix-web = "4.0" # Framework web (para API REST)
tonic = "0.12" # Framework gRPC
log = "0.4" # Logging
env_logger = "0.11" # Logger para desarrollo
config = "0.15" # Manejo de configuración
toml = "0.8" # Soporte para TOML
async-trait = "0.1" # Soporte para async traits
axum = "0.8.1" # Framework web (para API REST)
hyper = { version = "1.6", features = ["full"] } # Cliente HTTP
tower = "0.5" # Middleware para servicios HTTP
async-recursion = "1.1" # Soporte para recursión asíncrona
uuid = { version = "1.15.0", features = ["v4"] } # Soporte para UUIDs
base64 = { version = "0.22"} # Soporte para codificación base64
hex = "0.4" # Soporte para codificación hexadecimal

[dev-dependencies]
assertables = "9.5" # Para pruebas
