[package]
name = "ZenithStore"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] } # Runtime asíncrono
serde = { version = "1.0.219", features = [
  "derive",
] } # Serialización/Deserialización
serde_json = "1.0.140" # Soporte para JSON
rmp-serde = "1.3" # Soporte para MessagePack
bincode = "2.0.1" # Serialización binaria
actix-web = "4.10" # Framework web (para API REST)
tonic = { version = "0.12", features = ["transport"] } # Framework gRPC
log = "0.4" # Logging
env_logger = "0.11.7" # Logger para desarrollo
config = "0.15.9" # Manejo de configuración
toml = "0.8" # Soporte para TOML
async-trait = "0.1.87" # Soporte para async traits
axum = "0.8.1" # Framework web (para API REST)
hyper = { version = "1.6", features = ["full"] } # Cliente HTTP
tower = "0.5" # Middleware para servicios HTTP
async-recursion = "1.1" # Soporte para recursión asíncrona
uuid = { version = "1.15.1", features = ["v4"] } # Soporte para UUIDs
base64 = { version = "0.22" } # Soporte para codificación base64
hex = "0.4" # Soporte para codificación hexadecimal
futures = "0.3" # Soporte para futuros
tokio-tungstenite = "0.26.2" # Soporte para WebSockets
url = "2.3" # Soporte para URLs
hmac = "0.12"
sha2 = "0.10" # Soporte para SHA-256
reqwest = { version = "0.12.12", features = ["json"] } # Cliente HTTP
chrono = "0.4" # Soporte para fechas y horas
lazy_static = "1.5.0" # Soporte para variables estáticas
validator = { version = "0.20", features = ["derive"] }
regex = "1.11.1"  # Soporte para expresiones regulares
subtle = "2.6.1" # Soporte para operaciones criptográficas
byteorder = "1.5" # Soporte para orden de bytes
log4rs = "1.0" # Logger
scopeguard = "1.1" # Soporte para guardias de alcance

[dev-dependencies]
assertables = "9.5" # Para pruebas

[build-dependencies]
tonic-build = "0.12.3"

[profile.dev]
lto = false
